--- a/bezerra/assets/scss/app1.scss
+++ b/bezerra/assets/scss/app1.scss
@@ -69,8 +69,8 @@ a.botao-vermelho {
   box-shadow: 0px 0px 10px rgba(#000000, 0.3);
 }
 
-a.botao-vermelho:hover{
-  background: rgba(#ed2129, .9);
+a.botao-vermelho:hover {
+  background: rgba(#ed2129, 0.9);
   transition: 0.7s;
 }
 
@@ -176,7 +176,7 @@ header {
           }
         }
 
-        a.nav-link:hover{
+        a.nav-link:hover {
           border: 1px solid #ffffff;
           transition: 0.7s;
         }
@@ -342,6 +342,15 @@ header {
     }
   }
 }
+
+@media screen and (max-width: 575px) {
+  header {
+    nav.navbar {
+      padding: 15px;
+    }
+  }
+}
+
 #inicio {
   //background: url("/assets/image/Banner.jpg") center, #f9f9f9;
   //background-size: cover;
@@ -362,10 +371,8 @@ header {
   // }
 
   .owl-carousel {
-    
     .item {
-      
-      img{
+      img {
         height: calc(100vh - 116px);
         width: 100%;
         object-fit: cover;
