Correção dos nomes das imagens e ícones

--- a/bezerra/assets/css/app1.css
+++ b/bezerra/assets/css/app1.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i&display=swap");
 * {
   margin: 0px;
@@ -365,7 +364,7 @@ header {
     right: -3px; }
 
 #produtos {
-  background: url("/assets/image/Retângulo 63@2x.png") center no-repeat, #19784e;
+  background: url("/assets/image/retangulo63-2x.png") center no-repeat, #19784e;
   background-size: cover;
   position: relative;
   display: -webkit-box;
