--- a/bezerra/assets/scss/app1.scss
+++ b/bezerra/assets/scss/app1.scss
@@ -114,7 +114,7 @@ header {
     #ed2129 61%,
     #ffffff 61%,
     #ffffff 100%
-  );
+    );
   color: #ffffff;
   padding: 15px 0px;
   box-sizing: border-box;
@@ -198,7 +198,7 @@ header {
       #ed2129 66%,
       #ffffff 66%,
       #ffffff 100%
-    );
+      );
     nav.navbar {
       a.navbar-brand {
         img.bezerra {
@@ -494,7 +494,7 @@ header {
 }
 
 #produtos {
-  background: url("/assets/image/Retângulo 63@2x.png") center no-repeat, #19784e;
+  background: url("/assets/image/retangulo63-2x.png") center no-repeat, #19784e;
   background-size: cover;
   position: relative;
   display: flex;
